2004-12-06  Theodore A. Roth  <troth@openavr.org>

	* Release version 2.3.

2004-12-06  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Set version to 2.3.
	* configure.ac: Add more lib checks which might be need for libbfd.

2004-11-25  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* doc/avarice.1: Add at90can128 to supported list.
	Marked as experimental.
	* src/jtag.h: Fix typo in comment describing jtag_device_desc_type.
	* src/jtagio.cc (deviceDefinitions): Add entry for at90can128.

2004-11-21  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* doc/avarice.1: Update --program option to note that erase is no
	longer implicit.
	Make NOTE bold in note for --write-fuses option.
	* src/main.cc (usage): Remove erase from --program option.

2004-11-18  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* src/jtagprog.cc (jtag_create_image):
	Replace bfd_get_section_size_before_reloc with bfd_get_section_size.
	Work around for change API in bfd.

2004-11-12  Nils Kristian Strom  <nilsst@invalid.ed.ntnu.no>

	* configure.ac (AC_INIT): Bump version.
	* src/main.cc (main): Write lock bits when all other programming
	tasks are completed.

2004-10-25  Theodore A. Roth  <troth@openavr.org>
[Contributed by Colin O'Flynn <coflynn@newae.com>]

	* configure.ac (AC_INIT): Bump version.
	* doc/mk2-protocol.txt: New file.

2004-08-08  Nils Kristian Strom  <nilsst@invalid.ed.ntnu.no>

	* src/main.cc: Move device erase in front of write fuses in case
	of device being locked.

2004-08-05  Nils Kristian Strom  <nilsst@invalid.ed.ntnu.no>

	* src/jtagio.cc: (deviceDefinitions): Fix flash and eeprom page
	sizes for mega64 and mega128. (Thanks to Ted Roth for this).
	* src/jtagprog.cc: (jtag_flash_image): Don't override device specific
	eeprom page size.

2004-08-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Bootstrap: export AUTO* variables to make automake happy.
