@@ -1,3 +1,7 @@
+2004-12-06    <dgay@barnowl.research.intel-research.net>
+
+	* src/main.cc (main): resume execution on exit when not in server mode
+
 2004-12-06  Theodore A. Roth  <troth@openavr.org>
 
 	* Release version 2.3.
